Fix a layout issue

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,6 +17,7 @@
     font-size: 1.8rem
     font-style: italic
   .guessing
+    grid-area: main
     .speakingVoice
       font-size: 1.8rem
       font-style: italic
@@ -32,7 +33,7 @@
         position: relative
         top: calc(50% - 1.2rem)
         transform: translateY(-50%)
-    
+
       .guessLetter:hover
         color: red
         font-weight: bold
